--- a/docs/fr/modules/01) Config/main/Colors-conf.tex
+++ b/docs/fr/modules/01) Config/main/Colors-conf.tex
@@ -68,6 +68,8 @@
     Ce fichier de configurations liste chaque variable globale de couleur utilisée par la librairie, avec leurs valeurs par défaut, qui sont chargées en mémoire lors de l'inclusion du fichier \textbf{\color{path}Initialization.sh} appartenant au module principal.
 \end{justify}
 
+% ------------
+
 % ----------------------
 
 % -----------------------------------------------
@@ -89,6 +91,45 @@
     \textbf{Fonction : \color{func}BU::Main::ModConfig::Colors::SetBGColor}
 \end{justify}
 
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Description :}
+
+    Cette fonction
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Paramètres :}
+
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{\color{orange}\$1} & Nombre entier positif\\
+        \hline
+    \end{tabular}
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Fonctionnement :}
+
+    
+\end{justify}
+
+
+
+
+% ------------
+
 % ----------------------
 
 \color{sec3}\par\noindent\rule{\textwidth}{0.4pt}\color{text}
@@ -100,6 +141,41 @@
     \textbf{Fonction : \color{func}BU::Main::ModConfig::Colors::SetTextColor}
 \end{justify}
 
+\begin{justify}
+    \textbf{Description :}
+
+    Cette fonction
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Paramètres :}
+
+    \begin{tabular}{|l|l|}
+        \hline
+        \textbf{\color{orange}\$1} & Nombre entier positif\\
+        \hline
+    \end{tabular}
+\end{justify}
+
+% ------------
+
+\par\noindent\rule{\textwidth}{0.4pt}
+
+\begin{justify}
+    \textbf{Fonctionnement :}
+
+    
+\end{justify}
+
+
+
+
+% ------------
+
 % ----------------------
 
 % -----------------------------------------------
@@ -108,6 +184,8 @@
 
 \color{sec2}
 \subsection{Fonctions d'affichage de texte}\color{text}
+
+% ------------
 
 % ----------------------
 
