--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -343,7 +343,7 @@
         \setlength{\parskip}{1em}
 
         \begin{justify}
-            \textbf{\color{cond}Fin de la condition « if »}.
+            \textbf{\color{cond}Fin de la condition « si »}.
         \end{justify}
 
         \setlength{\parskip}{1em}
@@ -369,14 +369,14 @@
 \end{itemize}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition « if »}.
+    \textbf{\color{cond}Fin de la condition « si »}.
 \end{justify}
 
 \setlength{\parskip}{2em}
 
 
 \begin{justify}
-    Enfin, une fois l'une des deux boucles exécutée, \textbf{\color{cond}si} les paramètres \textbf{\color{vars}p\_lineColor} \textbf{\color{cond}OU} \textbf{\color{vars}p\_bgColor} contiennent une valeur, \textbf{\color{cond}alors} la fonction ré-encode la couleur d'affichage du texte \textbf{ET} celle de coloration du fond, selon la couleur par défaut du terminal. \textbf{\color{cond}Fin de la condition « if »}.
+    Enfin, une fois l'une des deux boucles exécutée, \textbf{\color{cond}si} les paramètres \textbf{\color{vars}p\_lineColor} \textbf{\color{cond}OU} \textbf{\color{vars}p\_bgColor} contiennent une valeur, \textbf{\color{cond}alors} la fonction ré-encode la couleur d'affichage du texte \textbf{ET} celle de coloration du fond, selon la couleur par défaut du terminal. \textbf{\color{cond}Fin de la condition « si »}.
 \end{justify}\setlength{\parskip}{1em}
 
 \par\noindent\rule{\textwidth}{0.4pt}
@@ -519,7 +519,7 @@
                         \end{justify}\setlength{\parskip}{1em}
 
                         \begin{justify}
-                            \textbf{\color{cond}Fin de la condition « if »}.
+                            \textbf{\color{cond}Fin de la condition « si »}.
                         \end{justify}
                     }
                 \end{itemize}
@@ -547,14 +547,14 @@
             \end{justify}
 
             \begin{justify}
-                \textbf{\color{cond}Fin de la condition « if »}.
+                \textbf{\color{cond}Fin de la condition « si »}.
             \end{justify}
         }
     }
 \end{itemize}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition « if »}.
+    \textbf{\color{cond}Fin de la condition « si »}.
 \end{justify}
 
 \setlength{\parskip}{2em}
