--- a/docs/fr/modules/main/functions/Echo.tex
+++ b/docs/fr/modules/main/functions/Echo.tex
@@ -349,7 +349,7 @@
     \textbf{Description :}
 
     Selon les étapes des fonctions \textbf{\color{func}Echo<...>} définies dans ce fichier de librairie, cette fonction appelle la fonction \textbf{\color{func}BU::Main::Echo::\_\_EchoVoid} définie précédemment pour créer un espace vide sur 10 lignes.
-    
+
     Cet espace est ensuite redirigé vers le même \textbf{\color{path}fichier temporaire}, pour mieux observer le début et la fin de la sortie d'une des fonctions \textbf{\color{func}Echo<...>} lors d'un déboguage avec la commande \textbf{\color{cmds}bash -x}, à la condition de fixer la valeur de la variable globale dde statut \textbf{\color{vars}\$\_\_BU\_MAIN\_STAT\_DEBUG} à \textbf{true}.
 \end{justify}
 
@@ -388,7 +388,7 @@
 \end{justify}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition « if »}.
+    \textbf{\color{cond}Fin de la condition « si »}.
 \end{justify}
 
 \setlength{\parskip}{2em}
@@ -414,7 +414,7 @@
         \setlength{\parskip}{1em}
 
         \begin{justify}
-            \textbf{\color{cond}Fin de la condition « if »}.
+            \textbf{\color{cond}Fin de la condition « si »}.
         \end{justify}
     }
 
@@ -459,7 +459,7 @@
                 \end{justify}
 
                 \begin{justify}
-                    \textbf{\color{cond}Fin de la condition « if »}.
+                    \textbf{\color{cond}Fin de la condition « si »}.
                 \end{justify}
             }
 
@@ -472,7 +472,7 @@
                 \end{justify}\setlength{\parskip}{1em}
 
                 \begin{justify}
-                    \textbf{\color{cond}Fin de la condition « if »}.
+                    \textbf{\color{cond}Fin de la condition « si »}.
                 \end{justify}
             }
         \end{itemize}
@@ -502,19 +502,19 @@
                 \end{justify}\setlength{\parskip}{1em}
 
                 \begin{justify}
-                    \textbf{\color{cond}Fin de la condition « if »}.
+                    \textbf{\color{cond}Fin de la condition « si »}.
                 \end{justify}
             }
         \end{itemize}
 
         \begin{justify}
-            \textbf{\color{cond}Fin de la condition « if »}.
+            \textbf{\color{cond}Fin de la condition « si »}.
         \end{justify}
     }
 \end{itemize}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition « if »}.
+    \textbf{\color{cond}Fin de la condition « si »}.
 \end{justify}
 
 % ------------
@@ -614,7 +614,7 @@
                         \end{justify}
 
                         \begin{justify}
-                            \textbf{\color{cond}Fin de la condition « if »}.
+                            \textbf{\color{cond}Fin de la condition « si »}.
                     \end{justify}
                     }
                 \end{itemize}
@@ -644,7 +644,7 @@
                         \end{justify}
 
                         \begin{justify}
-                            \textbf{\color{cond}Fin de la condition « if »}.
+                            \textbf{\color{cond}Fin de la condition « si »}.
                         \end{justify}
                     }
                 \end{itemize}
@@ -676,7 +676,7 @@
         \end{itemize}
 
         \begin{justify}
-            \textbf{\color{cond}Fin de la condition « if »}.
+            \textbf{\color{cond}Fin de la condition « si »}.
         \end{justify}
     }
 \end{itemize}
@@ -815,7 +815,7 @@
 \end{justify}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition « if »}
+    \textbf{\color{cond}Fin de la condition « si »}
 \end{justify}
 
 % ------------
@@ -885,7 +885,7 @@
 \end{justify}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition « if »}.
+    \textbf{\color{cond}Fin de la condition « si »}.
 \end{justify}
 
 % ------------
@@ -1095,7 +1095,7 @@
             \end{justify}
 
             \begin{justify}
-                \textbf{\color{cond}Fin de la condition « if »}.
+                \textbf{\color{cond}Fin de la condition « si »}.
             \end{justify}
         }
     \end{itemize}
@@ -1106,7 +1106,7 @@
 \end{justify}
 
 \begin{justify}
-    \textbf{\color{cond}Fin de la condition « if »}.
+    \textbf{\color{cond}Fin de la condition « si »}.
 \end{justify}
 
 \end{document}
