Updating the French documentation

--- a/docs/.Create_LaTeX_Document/Lib file.tex
+++ b/docs/.Create_LaTeX_Document/Lib file.tex
@@ -48,7 +48,7 @@ Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\base
 \subsection{Définitions des éléments mentionnés}\color{white}
 
 \color{blue}
-\subsubsection{Chemins de fichiers}\color{white}
+\subsubsection{Chemins des fichiers}\color{white}
 \textbf{Nom du fichier :} \textbf{\color{lime}\color{white}}\\[1\baselineskip]
 \textbf{Dossier parent :} \textbf{\color{lime}\color{white}*}\\[1\baselineskip]
 
