--- a/docs/fr/modules/main/functions/Checkings.tex
+++ b/docs/fr/modules/main/functions/Checkings.tex
@@ -88,7 +88,7 @@
 \subsection{Définitions des éléments mentionnés}\color{text}
 
 \color{sec3}
-\subsubsection{Chemins de fichiers}\color{text}
+\subsubsection{Chemins des fichiers}\color{text}
 
 
 
