--- a/docs/fr/modules/main/functions/Echo.tex
+++ b/docs/fr/modules/main/functions/Echo.tex
@@ -83,12 +83,12 @@
 \subsection{Définitions des éléments mentionnés}\color{text}
 
 \color{sec3}
-\subsubsection{Chemins de fichiers}\color{text}
+\subsubsection{Chemins des fichiers}\color{text}
 
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent (gestionaire de modules)} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_INSTALL\color{path}/}                           & \textbf{\color{path}Bash-utils-init.sh}\\
         \hline
@@ -96,7 +96,7 @@
 
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent (dossier des configurations)} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{path}/config/modules/main}    & \textbf{\color{path}Colors.conf}\\
         \hline
@@ -108,7 +108,7 @@
 
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent (dossier de la librairie)} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Checkings.lib}\\
         \hline
@@ -184,8 +184,11 @@
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
-        \textbf{Variable : \color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
+        \textbf{Variable} & \textbf{Fichier de définition}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
+        \hline
+        \textbf{\color{vars}\$\_\_BU\_MAIN\_COLOR\_BG\_...} & \textbf{\color{path}Colors.conf}\\
         \hline
     \end{tabular}
 
