--- a/docs/fr/modules/main/functions/Status.tex
+++ b/docs/fr/modules/main/functions/Status.tex
@@ -83,12 +83,12 @@
 \subsection{Définitions des éléments mentionnés}\color{text}
 
 \color{sec3}
-\subsubsection{Chemins de fichiers}\color{text}
+\subsubsection{Chemins des fichiers}\color{text}
 
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent (dossier de la librairie)} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main}   & \textbf{\color{lime}Checkings.lib}\\
         \hline
@@ -366,7 +366,7 @@
     \item
     {
         \begin{justify}
-            \textbf{\color{cond}Si} aucune valeur n'est enregistrée à l'index en cours de traitement, \textbf{\color{cond}alors} la chaîne de caractères \textbf{« un argument vide »} est ajoutée à la liste s'affichant à l'écran. 
+            \textbf{\color{cond}Si} aucune valeur n'est enregistrée à l'index en cours de traitement, \textbf{\color{cond}alors} la chaîne de caractères \textbf{« un argument vide »} est ajoutée à la liste s'affichant à l'écran.
         \end{justify}
 
         \setlength{\parskip}{1em}
