--- a/docs/fr/modules/main/functions/Errors.tex
+++ b/docs/fr/modules/main/functions/Errors.tex
@@ -60,7 +60,7 @@
 \subsection{Définitions des éléments mentionnés}\color{white}
 
 \color{blue}
-\subsubsection{Chemins de fichiers}\color{white}
+\subsubsection{Chemins des fichiers}\color{white}
 
 \textbf{Nom du fichier : \color{lime}}\\[1\baselineskip]
 
