--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -83,12 +83,12 @@
 \subsection{Définitions des éléments mentionnés}\color{text}
 
 \color{sec3}
-\subsubsection{Chemins de fichiers}\color{text}
+\subsubsection{Chemins des fichiers}\color{text}
 
 \begin{justify}
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent (dossier des configurations)} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{path}/config/modules/main}    & \textbf{\color{path}Colors.conf}\\
         \hline
@@ -100,7 +100,7 @@
 
     \begin{tabular}{|l|l|}
         \hline
-        \textbf{Dossier parent} & \textbf{Nom du fichier}\\
+        \textbf{Dossier parent (dossier de la librairie)} & \textbf{Nom du fichier}\\
         \hline
         \textbf{\color{vars}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{path}/lib/functions/main}   & \textbf{\color{path}Checkings.lib}\\
         \hline
@@ -140,9 +140,9 @@
         \hline
         \textbf{\color{func}BU::DechoHighlightFunction}    & \textbf{\color{path}Decho.lib}\\
         \hline
-        \textbf{\color{func}BU::Newline}           & \textbf{\color{path}Echo.lib}\\
-        \hline
         \textbf{\color{func}BU::EchoMsg}           & \textbf{\color{path}Echo.lib}\\
+        \hline
+        \textbf{\color{func}BU::Newline}           & \textbf{\color{path}Echo.lib}\\
         \hline
         \textbf{\color{func}BU::Main::Errors::HandleSmallErrors}   & \textbf{\color{path}Errors.lib}\\
         \hline
